--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'junit', name: 'junit', version: '4.12'
+    compile "org.flywaydb:flyway-core:4.2.0"
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	runtime('org.postgresql:postgresql')
