--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.tomcat.validation-query=SELECT 1
+spring.jpa.show-sql=true
+
 spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
