--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,9 @@ dependencies {
     compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'junit', name: 'junit', version: '4.12'
     compile "org.flywaydb:flyway-core:4.2.0"
+	compile('org.projectlombok:lombok')
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	runtime('org.postgresql:postgresql')
-
-	provided group: 'org.projectlombok', name: 'lombok', version: '1.14.8'
-
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
