--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -32,4 +33,6 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('junit:junit')
+    testCompile('org.mockito:mockito-core:1.10.8')
 }
