--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile "org.flywaydb:flyway-core:4.2.0"
     compile('org.projectlombok:lombok:1.14.8')
+	compile("com.h2database:h2")
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	runtime('org.postgresql:postgresql')
