--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,2 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:mem:
+spring.datasource.url=jdbc:h2:mem:notification;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
