--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.jpa.show-sql=true
-
 spring.datasource.url=${DATABASE_URL}
 
