--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.jpa.show-sql=true
