--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:public:DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.hibernate.ddl-auto=create-drop
