--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
