--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,3 @@
-spring.datasource.url=jdbc:h2:mem:public:DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:test:
 spring.jpa.hibernate.ddl-auto=create-drop
+flyway.enabled=false
