--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile "org.flywaydb:flyway-core:4.2.0"
     compile('org.projectlombok:lombok:1.14.8')
+	compile 'com.rabbitmq:amqp-client:4.1.1'
 	testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
