--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,10 @@
+services:
+    - rabbitmq-server
+    
 deployment:
   staging:
     branch: master
     heroku:
       appname: booking-notification-service
+      
+
