--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile "org.flywaydb:flyway-core:4.2.0"
     compile('org.projectlombok:lombok:1.14.8')
 	compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.1'
+	compile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '1.7.3.RELEASE'
+	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
 	testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
