--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.1'
 	compile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '1.7.3.RELEASE'
 	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+	compile group: 'com.sendgrid', name: 'sendgrid-java', version: '4.0.0'
 	testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
